[metadata]
name = histonet
version = attr: histonet.__version__

[options]
zip_safe = False
packages = find:
install_requires =
  argcomplete ~= 1.9.4
  numpy ~= 1.16.1
  pandas ~= 0.24.1
  pyyaml
  torch ~= 1.0.0
  torchvision ~= 0.2.1
  tqdm ~= 4.26.0
  scikit-image ~= 0.14.0
  scipy ~= 1.2.1
  matplotlib
python_requires = ~= 3.7

[options.entry_points]
console_scripts =
  histonet = histonet.__main__:main
